# rust-starter

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md
config/: Cargo.toml
config/src/: app.rs  database.rs  env.rs  jwt.rs  lib.rs  redis.rs  services.rs  vault.rs
contexts/: Cargo.toml
contexts/src/identity/application/: mod.rs
contexts/src/identity/application/dtos/: mod.rs  register_dto.rs  session.rs  user.rs  verification.rs
contexts/src/identity/domain/entities/: mod.rs  password_audit_entity.rs  profile_entity.rs  session.rs  session_entity.rs  user.rs  user_entity.rs  verification.rs  verification_entity.rs
contexts/src/identity/domain/repositories/: user_repository.rs
contexts/src/identity/infrastructure/: mod.rs
contexts/src/identity/infrastructure/persistence/: mod.rs  session_repository.rs  user_repository.rs  verification_repository.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/application/: mod.rs
core/src/application/services/: mod.rs
core/src/application/services/mail/: implementation.rs  interface.rs
core/src/application/services/mail_service/: mod.rs
core/src/application/services/storage/: implementation.rs  interface.rs  mod.rs
core/src/constants/: api.rs  app.rs  cache.rs  database.rs  file.rs  logging.rs  mod.rs  security.rs  validation.rs
core/src/errors/: handler.rs  types.rs
core/src/security/: jwt.rs  mod.rs  password.rs
core/src/types/: filter.rs  mod.rs  pagination.rs  response.rs
core/src/validation/: conversion.rs  file.rs  format.rs  length.rs  mod.rs
drivers/: Cargo.toml
drivers/src/: lib.rs
drivers/src/database/: connection.rs  migrations.rs  mod.rs
drivers/src/database/postgres/: mod.rs
drivers/src/database/postgres/schemas/: auth_event.rs  mod.rs  profile.rs  session.rs  verification.rs
drivers/src/database/schemas/: auth_event.rs  mod.rs  password_audit.rs  session.rs  user.rs  verification.rs
drivers/src/observability/logging/: init.rs  macros.rs  mod.rs  request_id.rs
drivers/src/schemas/: mod.rs  password_audit.rs  user.rs  user_profile.rs
drivers/src/services/: mod.rs
drivers/src/services/aws/: s3.rs
drivers/src/services/smtp/: client.rs
drivers/src/services/smtp_mailer/: implementation.rs  interface.rs  mod.rs
migrations/2025-05-17-152557_users/: down.sql  up.sql
scripts/: generate-migration.sh
shared/: Cargo.toml
shared/src/utils/: async_tool.rs  collection.rs  mod.rs  string.rs  time.rs
