[package]
name = "drivers"
version = "0.1.0"
edition = "2021"

[dependencies]
# Local dependencies
config = { path = "../config" }
core = { path = "../core" }

# Database
sqlx = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Date and time
chrono = { workspace = true }

# Email
lettre = { workspace = true }

# Utils
cuid = { workspace = true }